--- a/.settings/org.eclipse.core.resources.prefs
+++ b/.settings/org.eclipse.core.resources.prefs
@@ -2,3 +2,4 @@ eclipse.preferences.version=1
 encoding//src/decodeur_texte/Decodeur.java=UTF-8
 encoding//src/decodeur_texte/ListeTrames.java=UTF-8
 encoding//src/decodeur_texte/tests/HexaToIntTests.java=UTF-8
+encoding//src/main/Launcher.java=UTF-8
